--- a/sample/sample.css
+++ b/sample/sample.css
@@ -1,7 +1,11 @@
 body {
     margin: 0;
     font-size: 90%;
-    font-family: sans-serif;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 p {
     margin-top: 0.2em;
