--- a/description/desc-style.css
+++ b/description/desc-style.css
@@ -31,7 +31,7 @@ p {
     background-color: #ffffb3;
     padding: 0.5em;
 }
-#header > span > .infoType, #attack, #defense {
+#header > span:not(#attack, #defense) > .infoType, #attack, #defense {
     display: inline-block;
     width: 6em;
 }
@@ -55,7 +55,7 @@ p {
 #info > p.effect > .resolution {
     color: blue;
 }
-[class|="infoType"] {
+.infoType {
     font-variant: small-caps;
     font-weight: bold;
 }
