--- a/description/desc-style.css
+++ b/description/desc-style.css
@@ -49,7 +49,7 @@ p {
     font-style: italic;
 }
 #info > p.effect {
-    text-indent: 3em;
+    text-indent: 1.5em;
 }
 #info > p.effect > .condition {
     color: green;
@@ -59,6 +59,13 @@ p {
 }
 #info > p.effect > .resolution {
     color: blue;
+}
+#info > ul {
+    margin: 0;
+    padding: 0;
+    /* text-indent: 1.5em; */
+    padding-left: 1.5em;
+    list-style-position: inside;
 }
 .infoType {
     font-variant: small-caps;
