--- a/search-style.css
+++ b/search-style.css
@@ -29,9 +29,6 @@ p {
     flex-shrink: 0;
     padding-bottom: 5px;
 }
-#cardDesc {
-    flex-grow: 1;
-}
 #jpDesc {
     font-size: 0.6em;
 }
@@ -40,9 +37,10 @@ p {
     margin: 0;
     padding-bottom: 5px;
 }
-#cardNames {
-    flex-grow: 1;
+#searchResults {
     overflow-y: auto;
+}
+#cardNames {
     margin: 0;
     padding: 0;
     padding-left: 1.5em;
