--- a/duels/duel-style.css
+++ b/duels/duel-style.css
@@ -53,7 +53,7 @@ sup {
     text-indent: 20px;
     /* text-align: justify; */
 }
-#duelScript > div > p.note {
+#duelScript > div > p.note, #duelScript > div > p.error {
     font-size: 0.8em;
     font-style: italic;
 }
@@ -74,4 +74,7 @@ sup {
 .token {
     font-weight: bold;
     white-space: nowrap;
+}
+.error, .error > * {
+    color: red;
 }
